# manim-evo-story-reimagined

./: .gitattributes  .gitignore  AGENTS.md  CONTRIBUTING.md  LIVE_SYNC_STATUS.md  README.md  opencode.json  pyproject.toml  x_key.example
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  video_generation.md
.github/workflows/: ci.yml
docs/: AUDIO_DESIGN.md  PIPELINE_OVERVIEW.md  PROMPT_PHILOSOPHY.md
scripts/: create_longform_video.py  full_video.py  shared.py
video_project/: assemble.py  assemble_enhanced.py  create_longform_video.py  full_video.py  full_video_sound.py  generate_chapter.py  generate_music.py  generate_sounds.py  generate_voiceover.py  grok_video.py  post_production.py  remix_professional.py  render_pipeline.py  sound_design.py
